# yeyodra

./: .gitattributes  .gitignore  BYPASS_CONFIGURATION_GUIDE.md  OFFLINE_SETUP_GUIDE.md  README.md  SCALABILITY_FOR_THOUSANDS_ANALYSIS.md  STEAM_API_RATE_LIMITING_IMPLEMENTATION.md  design.json  index.html  package.json
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  game_database.rs  hwid.rs  library.rs  main.rs  models.rs  steam_api.rs
src/components/: Bypass.jsx  Bypass.scss  BypassProgressBar.jsx  BypassProgressBar.scss  CategoryButtons.jsx  CategoryButtons.scss  ConfirmationModal.jsx  ConfirmationModal.scss  DlcManager.jsx  DlcManager.scss  DrmNotice.jsx  DrmNotice.scss  Featured.jsx  Featured.scss  Footer.jsx  Footer.scss  GameCard.jsx  GameCard.scss  GameDetails.jsx  GameDetails.scss  HWIDAuth.jsx  HWIDAuth.scss  Header.jsx  Header.scss  LaunchGameModal.jsx  LaunchGameModal.scss  NotificationSystem.jsx  NotificationSystem.scss  OfflineSetup.jsx  OfflineSetup.scss  PremiumNotice.jsx  PremiumNotice.scss  SaveManager.jsx  SaveManager.scss  Settings.jsx  Settings.scss  Sidebar.jsx  Sidebar.scss  SystemRequirements.jsx  SystemRequirements.scss  (+2 more)
src/contexts/: AuthContext.jsx
src/hooks/: useNotification.js
src/scss/: globals.scss
